Fix alignment

--- a/app/assets/stylesheets/views/users.css.scss
+++ b/app/assets/stylesheets/views/users.css.scss
@@ -703,7 +703,7 @@ html.users_show {
 
         h3 {
           position: absolute;
-          top: 30px;
+          top: 40px;
           left: 0;
 
           width: 90px;
